# ReasonForge

./: .env.example  .gitignore  PLAN.md  PLAN_PRODUCTION.md  PLAN_PROOF_LAYER.md  Project1.docx  Project2.docx  README.md  app.tsx  index.css  index.html  main.tsx  min_compute.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-miner.txt  requirements-validator.txt  requirements.txt  tsconfig.json
.github/workflows/: build-docker.yml  lint.yml  test.yml
api/: __init__.py  server.py
benchmarks/: run_humaneval.py
benchmarks/causal/: inference.json
benchmarks/code/: algorithms.json  systems.json
benchmarks/mathematics/: algebra.json  calculus.json  number_theory.json
benchmarks/results/: humaneval_results.json
benchmarks/scientific/: chemistry.json  physics.json
benchmarks/strategic/: game_theory.json  optimization.json
dashboard/: App.jsx
docker/: Dockerfile.gateway  Dockerfile.miner  Dockerfile.sandbox  Dockerfile.validator  docker-compose.localnet.yml  docker-compose.monitoring.yml  docker-compose.yml
docs/: ARCHITECTURE.md
docs/whitepaper/: main.tex  refs.bib  workshop.tex
monitoring/: prometheus.yml
monitoring/alerts/: rules.yml
neurons/: miner.py  validator.py
reasonforge/: __init__.py  __main__.py  engine.py  plagiarism.py  protocol.py  run.py  simulator.py  task_generator.py  types.py
reasonforge/base/: __init__.py  config.py  neuron.py
reasonforge/certificates/: __init__.py  prover.py  registry.py  schema.py  setup.py  witness.py  zk_prover.py  zk_verifier.py
reasonforge/codeverify/: __init__.py  api.py  certificate.py  pipeline.py  report.py  sandbox.py  security_scanner.py  test_generator.py
reasonforge/embeddings/: __init__.py  similarity.py
reasonforge/gateway/: __init__.py  app.py  auth.py  billing.py  rate_limiter.py  schemas.py
reasonforge/miner/: __init__.py  domain_router.py  proof_generator.py  reasoning.py
reasonforge/monitoring/: __init__.py  health.py  logger.py  metrics.py
reasonforge/security/: __init__.py  anomaly.py  rate_guard.py  sanitizer.py
reasonforge/state/: __init__.py  checkpoint.py  database.py  migrations.py
reasonforge/translation/: __init__.py  engine.py  parsers.py  prompts.py  types.py
reasonforge/validator/: __init__.py  consensus.py  (+5 more)
scripts/: register_neurons.sh  register_subnet.sh  run_localnet.sh  setup_wallets.sh
tests/: conftest.py  test_certificates.py  test_codeverify.py  test_codeverify_integration.py  test_embeddings.py  test_engine.py  test_gateway.py  test_integration_local.py  test_proof_layer_simulator.py  test_protocol.py  test_scoring.py  test_security.py  test_simulator.py  test_state.py  test_translation.py  test_types.py  test_verification.py
vscode-extension/: package.json
(+21 files in other folders)
