[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasonforge"
version = "0.1.0"
description = "The Decentralized Marketplace for Verifiable Intelligence - Bittensor Subnet"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
miner = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
validator = [
    "sympy>=1.12",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
]
embeddings = ["sentence-transformers>=2.2.0"]
gateway = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "httpx>=0.24.0",
]
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "sympy>=1.12",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "sentence-transformers>=2.2.0",
    "python-jose>=3.3.0",
    "httpx>=0.24.0",
]

[project.scripts]
reasonforge = "reasonforge.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
