[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasonforge"
version = "0.1.0"
description = "The Decentralized Marketplace for Verifiable Intelligence"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
zk = []  # No extra Python packages needed; requires circom and snarkjs (npm) on PATH
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
reasonforge = "reasonforge.run:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
